--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "^3.0.1",
+    "react-router-dom": "^7.6.2",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -42,8 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^3.4.3"
   }
 }
