feat(payment): add processing fee calculation and display in payment summary
- Implemented processing fee calculation based on event ID and amount.
- Updated payment summary to show subtotal, processing fee, and total amount.
- Enhanced loading state for processing fee calculation.
- Adjusted payment button to reflect final amount including processing fees.

refactor(seat-selection): reduce notification frequency for admin seat toggle

- Updated admin seat toggle notification to reduce frequency of toast messages.
- Adjusted API endpoint for fetching event details to remove redundant `/api` prefix.

fix(ticket-selection): correct event date check logic

- Updated logic to check if the event date is today or in the future.

refactor(api): remove redundant `/api` prefix from API endpoints

- Updated various services to remove `/api` prefix from API calls for consistency.
- Adjusted related services and components accordingly.

feat(session-storage): implement fallback storage for localStorage

- Added fallback storage mechanism for session IDs when localStorage is unavailable.
- Enhanced error handling for session ID storage and retrieval.

chore(dev): add development start script for local environment

- Created `start-dev.bat` for easier local development setup.

chore(web-config): add basic and production web.config files

- Added web.config files for basic and production environments to handle SPA routing and error pages.

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # .env.production
-REACT_APP_API_BASE_URL=https://kiwilanka.co.nz
-REACT_APP_QR_API_BASE_URL=https://kiwilanka.co.nz:5075
+REACT_APP_API_BASE_URL=https://kiwilanka.co.nz/api
+REACT_APP_QR_API_BASE_URL=https://kiwilanka.co.nz/qrapp-api
