--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Base environment variables
-REACT_APP_API_BASE_URL=http://localhost:5290
+REACT_APP_API_BASE_URL=http://localhost:5000/api
 REACT_APP_QR_API_BASE_URL=http://localhost:5075
