--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 # .env.development
-REACT_APP_API_BASE_URL=http://localhost:5000/api
+REACT_APP_API_BASE_URL=http://localhost:5000
 REACT_APP_QR_API_BASE_URL=http://localhost:5002
