--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-# .env.production
-REACT_APP_API_BASE_URL=https://kiwilanka.co.nz/api
-REACT_APP_QR_API_BASE_URL=https://kiwilanka.co.nz/qrapp-api
+# .env.production - Testing Configuration
+# Using relative API paths for testing environment at thelankanspace.co.nz/kw/
+REACT_APP_API_BASE_URL=/kw/api
+REACT_APP_QR_API_BASE_URL=/kw/qrapp-api
