--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "event-booking-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/kw/",
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
