--- a/public/web.config
+++ b/public/web.config
@@ -8,11 +8,18 @@
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <!-- Don't rewrite API calls for the /kw/ subpath -->
+            <add input="{REQUEST_URI}" pattern="^/kw/api/" negate="true" />
             <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
             <add input="{REQUEST_URI}" pattern="^/qrapp-api/" negate="true" />
             <add input="{REQUEST_URI}" pattern="^/qrapp/" negate="true" />
+            <!-- Don't rewrite static files -->
+            <add input="{REQUEST_URI}" pattern="^/kw/static/" negate="true" />
+            <!-- Don't rewrite manifest and other assets -->
+            <add input="{REQUEST_URI}" pattern="^/kw/manifest.json" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/kw/favicon.ico" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/index.html" />
+          <action type="Rewrite" url="/kw/index.html" />
         </rule>
       </rules>
     </rewrite>
@@ -23,5 +30,15 @@
         <add value="index.html" />
       </files>
     </defaultDocument>
+
+    <!-- Set proper MIME types -->
+    <staticContent>
+      <remove fileExtension=".json" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
   </system.webServer>
 </configuration>
