feat: Configure production deployment for kiwilanka.co.nz
- Update .env.production for kiwilanka.co.nz domain (was test config)
- Fix package.json homepage for production root domain deployment
- Update web.config for production root domain routing
- Add .env.test and web.config.test for test environment
- Add PRODUCTION_DEPLOYMENT_GUIDE.md with deployment instructions
- Separate production and test configurations for easy switching

Production URLs:
- Frontend: https://kiwilanka.co.nz/
- API: https://kiwilanka.co.nz/api

Test URLs:
- Frontend: https://thelankanspace.co.nz/kw/
- API: https://thelankanspace.co.nz/kw/api

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# .env.production - Testing Configuration
-# Using relative API paths for testing environment at thelankanspace.co.nz/kw/
-REACT_APP_API_BASE_URL=/kw/api
-REACT_APP_QR_API_BASE_URL=/kw/qrapp-api
+# .env.production - Production Configuration
+# Using absolute API paths for production environment at kiwilanka.co.nz
+REACT_APP_API_BASE_URL=https://kiwilanka.co.nz/api
+REACT_APP_QR_API_BASE_URL=https://kiwilanka.co.nz/qrapp-api
