--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "event-booking-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/kw/",
+  "homepage": "/",
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
@@ -46,6 +46,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
+    "build:test": "env-cmd -f .env.test react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -72,6 +74,7 @@
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.21",
+    "env-cmd": "^10.1.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.3"
   }
