--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@
 # Using absolute API paths for production environment at kiwilanka.co.nz
 REACT_APP_API_BASE_URL=https://kiwilanka.co.nz/api
 REACT_APP_QR_API_BASE_URL=https://kiwilanka.co.nz/qrapp-api
+REACT_APP_BASE_URL=https://kiwilanka.co.nz
