--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@
 # Using relative API paths for testing environment at thelankanspace.co.nz/kw/
 REACT_APP_API_BASE_URL=/kw/api
 REACT_APP_QR_API_BASE_URL=/kw/qrapp-api
+REACT_APP_BASE_URL=https://thelankanspace.co.nz
