feat: Update API configurations and enhance event handling with improved error checks

--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,4 @@
 REACT_APP_API_BASE_URL=/kw/api
 REACT_APP_QR_API_BASE_URL=/kw/qrapp-api
 REACT_APP_BASE_URL=https://thelankanspace.co.nz
+PUBLIC_URL=/kw
