--- a/public/web.config
+++ b/public/web.config
@@ -8,8 +8,9 @@
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-            <!-- Don't rewrite API calls -->
+            <!-- Don't rewrite API calls - handle subdirectory properly -->
             <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/kw/api/" negate="true" />
             <add input="{REQUEST_URI}" pattern="^/qrapp-api/" negate="true" />
             <add input="{REQUEST_URI}" pattern="^/qrapp/" negate="true" />
             <!-- Don't rewrite static files -->
