feat: Rebrand to KiwiLanka Tickets with updated titles, descriptions, and SEO metadata across the application

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "KiwiLanka Tickets",
+  "name": "KiwiLanka Professional Ticketing Platform",
   "icons": [
     {
       "src": "favicon.ico",
