--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/react-dom": "^18.2.0",
     "antd": "^5.26.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.0",
     "konva": "^9.2.0",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
