feat: Add Google Analytics 4 (G-V9HTB2CSZH) tracking and HTTP to HTTPS redirect
- Added GA4 measurement ID alongside Google Ads tracking (AW-17215959436)
- Implemented automatic HTTP to HTTPS redirect in web.config
- Updated RouteTracker to track both GA4 and Google Ads
- Applied redirect rules to frontend and production configurations

--- a/public/web.config
+++ b/public/web.config
@@ -3,6 +3,16 @@
   <system.webServer>
     <rewrite>
       <rules>
+        <!-- HTTP to HTTPS Redirect - Must be first -->
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+        </rule>
+        
+        <!-- React Router SPA Handling -->
         <rule name="ReactRouter" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
